翻译1.3 方言：标准方言

--- a/I. Using Thymeleaf/1.3 Dialects：The Standard Dialect.md
+++ b/I. Using Thymeleaf/1.3 Dialects：The Standard Dialect.md
@@ -1,2 +1,25 @@
 ### 1.3 方言：标准方言
 
+Thymeleaf是一种极其容易扩展的模板引擎（实际上，它可以被称为模板引擎框架）。它允许你定义和配置如何处理你的模板，使其在细节上达到恰当的水平。
+
+将一些逻辑应用到标记物（一个标签、一些文本、一段注释，或者仅仅是一个占位符，如果模板没有标记）上的物体称为处理器。一套处理器——再加上一些另外的东西，通常就构成了**方言**。开箱即用，Thymeleaf的核心库提供了一种方言，称之为**标准方言**。对于大多数用户，标准方言应该就足够了。
+
+```
+注意：方言实际上可以没有处理器，完全由其它东西构成。但是，处理器绝对是最常见的使用案例。
+```
+
+此教程论述了标准方言。你接下来学习的每一个属性和语法特性都由此方言定义，即使没有明确指出。
+
+Of course, users can create their own dialects (even extending the Standard one) if they want to define their own processing logic while taking advantage of the library’s advanced features. Thymeleaf can also be configured to use several dialects at a time.
+
+The official thymeleaf-spring3 and thymeleaf-spring4 integration packages both define a dialect called the “SpringStandard Dialect”, which is mostly the same as the Standard Dialect, but with small adaptations to make better use of some features in the Spring Framework (for example, by using Spring Expression Language or SpringEL instead of OGNL). So if you are a Spring MVC user you are not wasting your time, as almost everything you learn here will be of use in your Spring applications.
+
+Most of the processors of the Standard Dialect are attribute processors. This allows browsers to correctly display HTML template files even before being processed because they will simply ignore the additional attributes. For example, while a JSP using tag libraries could include a fragment of code not directly displayable by a browser like:
+
+<form:inputText name="userName" value="${user.name}" />
+…the Thymeleaf Standard Dialect would allow us to achieve the same functionality with:
+
+<input type="text" name="userName" value="James Carrot" th:value="${user.name}" />
+Not only will this be correctly displayed by browsers, but this also allow us to (optionally) specify a value attribute in it (“James Carrot”, in this case) that will be displayed when the prototype is statically opened in a browser, and that will be substituted by the value resulting from the evaluation of ${user.name} during processing of the template.
+
+This helps your designer and developer to work on the very same template file and reduce the effort required to transform a static prototype into a working template file. The ability to do this is a feature called Natural Templating.
