翻译2.1 杂货店网站

--- a/I. Using Thymeleaf/2.1 A website for a grocery.md
+++ b/I. Using Thymeleaf/2.1 A website for a grocery.md
@@ -1,13 +1,13 @@
 ### 2.1 杂货店网站
 
-To better explain the concepts involved in processing templates with Thymeleaf, this tutorial will use a demo application which you can download from the project’s web site.
+为了更好地解释在使用Thymeleaf处理模版时涉及的概念，本教程将会使用一个演示应用。你可以从项目的网站上下载⏬。
 
-This application is the web site of an imaginary virtual grocery, and will provide us with many scenarios to showcase Thymeleaf’s many features.
+这个应用是一个虚构的杂货店的网站。它将会提供我们许多场景，来展示Thymeleaf的诸多特性。
 
-To start, we need a simple set of model entities for our application: Products which are sold to Customers by creating Orders. We will also be managing Comments about those Products:
+首先，我们需要为应用准备一套简单的模型实体：通过创建订单卖给顾客的产品。我们也会管理与那些产品有关的评论。
 ![Example application model](http://www.thymeleaf.org/doc/tutorials/3.0/images/usingthymeleaf/gtvg-model.png)
 
-Our application will also have a very simple service layer, composed by Service objects containing methods like:
+我们的应用也会🈶️一个非常简单的服务层，由包含如下方法的服务对象组成：
 
 ```java
 public class ProductService {
@@ -25,7 +25,7 @@ public class ProductService {
 }
 ```
 
-At the web layer our application will have a filter that will delegate execution to Thymeleaf-enabled commands depending on the request URL:
+在网络层，我们的应用将会🈶️一个过滤器。它会依据请求的URL，分配执行启用Thymeleaf的命令：
 
 ```java
 private boolean process(HttpServletRequest request, HttpServletResponse response)
@@ -85,7 +85,7 @@ private boolean process(HttpServletRequest request, HttpServletResponse response
 }
 ```
 
-This is our IGTVGController interface:
+这是我们的IGTVGController接口：
 
 ```java
 public interface IGTVGController {
@@ -97,10 +97,10 @@ public interface IGTVGController {
 }
 ```
 
-All we have to do now is create implementations of the IGTVGController interface, retrieving data from the services and processing templates using the ITemplateEngine object.
+现在我们要做的就是创建IGTVGController接口的实现，从服务中取回数据，并使用ITemplateEngine对象处理模版。
 
-In the end, it will look like this:
+最后，它看起来就像这样：
 
 ![Example application home page](http://www.thymeleaf.org/doc/tutorials/3.0/images/usingthymeleaf/gtvg-view.png)
 
-But first let’s see how that template engine is initialized.
+但是，先让我们看看那个模版引擎是怎么被初始化的。
