翻译2.2 创建和配置模板引擎

--- a/I. Using Thymeleaf/2.1 A website for a grocery.md
+++ b/I. Using Thymeleaf/2.1 A website for a grocery.md
@@ -4,11 +4,11 @@
 
 这个应用是一个虚构的杂货店的网站。它将会提供我们许多场景，来展示Thymeleaf的诸多特性。
 
-首先，我们需要为应用准备一套简单的模型实体：通过创建订单卖给顾客的产品。我们也会管理与那些产品有关的评论。
+首先，我们需要为应用准备一套简单的模型实体：通过创建`订单`卖给`顾客`的`产品`。我们也会管理与那些`产品`有关的`评论`。
 
 ![Example application model](http://www.thymeleaf.org/doc/tutorials/3.0/images/usingthymeleaf/gtvg-model.png)
 
-我们的应用也会🈶️一个非常简单的服务层，由包含如下方法的服务对象组成：
+我们的应用也会🈶️一个非常简单的服务层，由包含如下方法的`服务`对象组成：
 
 ```java
 public class ProductService {
@@ -86,7 +86,7 @@ private boolean process(HttpServletRequest request, HttpServletResponse response
 }
 ```
 
-这是我们的IGTVGController接口：
+这是我们的`IGTVGController`接口：
 
 ```java
 public interface IGTVGController {
@@ -98,7 +98,7 @@ public interface IGTVGController {
 }
 ```
 
-现在我们要做的就是创建IGTVGController接口的实现，从服务中取回数据，并使用ITemplateEngine对象处理模版。
+现在我们要做的就是创建`IGTVGController`接口的实现，从服务中取回数据，并使用`ITemplateEngine`对象处理模版。
 
 最后，它看起来就像这样：
 
