翻译3.1 多种语言显示欢迎

--- a/I. Using Thymeleaf/3.1 A multi-language welcome.md
+++ b/I. Using Thymeleaf/3.1 A multi-language welcome.md
@@ -1,9 +1,9 @@
 ### 3.1 多种语言显示欢迎
 
-Our first task will be to create a home page for our grocery site.
+我们的第一个任务是为杂货店网站创建主页。
 
-The first version of this page will be extremely simple: just a title and a welcome message. This is our /WEB-INF/templates/home.html file:
-
+主页的第一版将会非常简单：一个标题和欢迎信息。这就是我们的`/WEB-INF/templates/home.html`文件：
+```html
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org">
@@ -22,15 +22,17 @@ The first version of this page will be extremely simple: just a title and a welc
   </body>
 
 </html>
-The first thing you will notice is that this file is HTML5 that can be correctly displayed by any browser because it does not include any non-HTML tags (browsers ignore all attributes they don’t understand, like th:text).
+```
+你注意到的第一件事是：这个文件是HTML5，可以被任何浏览器正确地表示，因为它没有包含任何非HTML标签（浏览器会忽略所有不认识的属性，比如`th:text`）。 
 
-But you may also notice that this template is not really a valid HTML5 document, because these non-standard attributes we are using in the th:* form are not allowed by the HTML5 specification. In fact, we are even adding an xmlns:th attribute to our <html> tag, something absolutely non-HTML5-ish:
-
+但是，你也可能注意到这个模板实际上并不是一个有效的HTML5文档，因为HTML5规范不允许使用这些非标准属性（`th:*`）。实际上，我们甚至往`<html>`标签里加了`xmlns:th`属性，这样完全不是HTML5风格的东西：
+```html
 <html xmlns:th="http://www.thymeleaf.org">
-…which has no influence at all in template processing, but works as an incantation that prevents our IDE from complaining about the lack of a namespace definition for all those th:* attributes.
+```
+这对模板的处理完全没有影响，但是它能像魔法一样，防止IDE抱怨这些`th:*`属性缺少命名空间的定义。
 
-So what if we wanted to make this template HTML5-valid? Easy: switch to Thymeleaf’s data attribute syntax, using the data- prefix for attribute names and hyphen (-) separators instead of semi-colons (:):
-
+要是我们想要这个模板变成**有效的HTML5**，该怎么办呢？简单：使用Thymeleaf的数据属性语法，为属性名使用`data-`前缀，同时用连字符（`-`）代替冒号（`:`）：
+```html
 <!DOCTYPE html>
 
 <html>
@@ -49,6 +51,9 @@ So what if we wanted to make this template HTML5-valid? Easy: switch to Thymelea
   </body>
 
 </html>
-Custom data- prefixed attributes are allowed by the HTML5 specification, so, with this code above, our template would be a valid HTML5 document.
-
-Both notations are completely equivalent and interchangeable, but for the sake of simplicity and compactness of the code samples, this tutorial will use the namespace notation (th:*). Also, the th:* notation is more general and allowed in every Thymeleaf template mode (XML, TEXT…) whereas the data- notation is only allowed in HTML mode.
+```
+HTML5规范允许自定义的`data-`前缀属性，所以用上面的代码，我们的模板就能成为有效的HTML5文档。
+```
+两种记法完全等价，可以互换。但是，为了简单起见，本教程将使用命名空间记法（`th:*`）。
+而且，`th:*`记法更加普遍，在每一种Thymeleaf模板模式（XML，TEXT······）中都被允许,而`data-`记法只在HTML模式中被允许使用。
+```
