--- a/I. Using Thymeleaf/4.1 Messages.md
+++ b/I. Using Thymeleaf/4.1 Messages.md
@@ -1,14 +1,14 @@
 ### 4.1 信息
 
-As we already know, `#{...}` message expressions allow us to link this:
+我们已经知道，`#{...}`信息表达式允许我们将这个：
 ```html
 <p th:utext="#{home.welcome}">Welcome to our grocery store!</p>
 ```
-…to this:
+链接到这个：
 ```
 home.welcome=¡Bienvenido a nuestra tienda de comestibles!
 ```
-But there’s one aspect we still haven’t thought of: what happens if the message text is not completely static? What if, for example, our application knew who is the user visiting the site at any moment and we wanted to greet them by name?
+但是还有一个方面，我们没有考虑到：如果文本信息不是完全静态的，将会发生什么呢？比如，要是我们的应用在任何时候都知道谁正在访问，并且我们想要在显示欢迎信息的时候带上名字，该怎么办呢？
 ```html
 <p>¡Bienvenido a nuestra tienda de comestibles, John Apricot!</p>
 ```
