--- a/I. Using Thymeleaf/4.1 Messages.md
+++ b/I. Using Thymeleaf/4.1 Messages.md
@@ -12,7 +12,7 @@ home.welcome=¡Bienvenido a nuestra tienda de comestibles!
 ```html
 <p>¡Bienvenido a nuestra tienda de comestibles, John Apricot!</p>
 ```
-This means we would need to add a parameter to our message. Just like this:
+这意味着我们需要在信息里添加一个参数。就像这样：
 ```
 home.welcome=¡Bienvenido a nuestra tienda de comestibles, {0}!
 ```
