--- a/I. Using Thymeleaf/4.1 Messages.md
+++ b/I. Using Thymeleaf/4.1 Messages.md
@@ -16,15 +16,15 @@ home.welcome=¡Bienvenido a nuestra tienda de comestibles!
 ```
 home.welcome=¡Bienvenido a nuestra tienda de comestibles, {0}!
 ```
-Parameters are specified according to the `java.text.MessageFormat` standard syntax, which means you can format to numbers and dates as specified in the API docs for those classes.
+参数由`java.text.MessageFormat`标准语法指定。这意味着你可以按照那些类的API文档，将它们格式化为数字或者日期。
 
-In order to specify a value for our parameter, and given an HTTP session attribute called `user`, we would have:
+我们有一个HTTP会话属性，叫做`user`，为了给我们的参数指定一个值，我们这样写：
 ```html
 <p th:utext="#{home.welcome(${session.user.name})}">
   Welcome to our grocery store, Sebastian Pepper!
 </p>
 ```
-Several parameters can be specified, separated by commas. In fact, the message key itself could come from a variable:
+可以指定多个参数（用逗号隔开）。实际上，信息的键本身可以来自于一个变量：
 ```html
 <p th:utext="#{${welcomeMsgKey}(${session.user.name})}">
   Welcome to our grocery store, Sebastian Pepper!
