--- a/I. Using Thymeleaf/4.2 Variables.md
+++ b/I. Using Thymeleaf/4.2 Variables.md
@@ -1,30 +1,30 @@
 ### 4.2 变量
 
-We already mentioned that `${...}` expressions are in fact OGNL (Object-Graph Navigation Language) expressions executed on the map of variables contained in the context.
+我们之前提到`${...}`表达式实际上就是OGNL（对象导航图语言）表达式，只是它在上下文里的变量的映射关系上被执行。
 ```
-For detailed info about OGNL syntax and features, you should read the [OGNL Language Guide](http://commons.apache.org/ognl/)
+关于OGNL语法和特性的细节，你应当阅读[OGNL语言指南](http://commons.apache.org/ognl/)
 
-In Spring MVC-enabled applications OGNL will be replaced with **SpringEL**, but its syntax is very similar to that of OGNL (actually, exactly the same for most common cases).
+在启用Spring MVC的应用里，OGNL会被**SpringEL**代替，但是它的语法和OGNL非常相似（实际上，在大多数普通情况下，两者基本相同）。
 ```
-From OGNL’s syntax, we know that the expression in:
+从OGNL的语法来看，我们知道下面的表达式：
 ```html
 <p>Today is: <span th:text="${today}">13 february 2011</span>.</p>
 ```
-…is in fact equivalent to this:
+实际上相当于：
 ```html
 ctx.getVariable("today");
 ```
-But OGNL allows us to create quite more powerful expressions, and that’s how this:
+但是OGNL允许我们创建相当强大的表达式，那就是为什么如下：
 ```html
 <p th:utext="#{home.welcome(${session.user.name})}">
   Welcome to our grocery store, Sebastian Pepper!
 </p>
 ```
-…obtains the user name by executing:
+可以这样执行：
 ```java
 ((User) ctx.getVariable("session").get("user")).getName();
 ```
-But getter method navigation is just one of OGNL’s features. Let’s see some more:
+但是，getter方法导航只是OGNL的其中一个特性。让我们看看更多的特性：
 ```
 /*
  * Access to properties using the point (.). Equivalent to calling property getters.
