Update 4.3 Expressions on selections （asterisk syntax）.md

--- a/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
+++ b/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
@@ -1,8 +1,8 @@
 ### 4.3 选择变量表达式（星号语法）
 
-Not only can variable expressions be written as `${...}`, but also as `*{...}`.
+变量表达式不仅可以写成`${...}`，还可以写成`*{...}`。
 
-There is an important difference though: the asterisk syntax evaluates expressions on selected objects rather than on the whole context. That is, as long as there is no selected object, the dollar and the asterisk syntaxes do exactly the same.
+尽管两者之间有一个重要的不同点：星号语法在选好的对象上，而不是整个上下文里对表达式求值。也就是说，只要没有已经选好的对象，美元符号语法与星号语法，实际上做了相同的事情。
 
 And what is a selected object? The result of an expression using the `th:object` attribute. Let’s use one in our user profile (`userprofile.html`) page:
 ```html
