--- a/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
+++ b/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
@@ -4,7 +4,7 @@
 
 尽管两者之间有一个重要的不同点：星号语法在选好的对象上，而不是整个上下文里对表达式求值。也就是说，只要没有已经选好的对象，美元符号语法与星号语法，实际上做了相同的事情。
 
-And what is a selected object? The result of an expression using the `th:object` attribute. Let’s use one in our user profile (`userprofile.html`) page:
+那么，已经选好的对象又是什么意思呢？使用`th:object`属性的表达式结果。让我们在用户资料（`userprofile.html`）页面使用一个：
 ```html
   <div th:object="${session.user}">
     <p>Name: <span th:text="*{firstName}">Sebastian</span>.</p>
