翻译4.3 选择变量表达式（星号语法）

--- a/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
+++ b/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
@@ -12,7 +12,7 @@
     <p>Nationality: <span th:text="*{nationality}">Saturn</span>.</p>
   </div>
 ```
-Which is exactly equivalent to:
+这等价于：
 ```html
 <div>
   <p>Name: <span th:text="${session.user.firstName}">Sebastian</span>.</p>
@@ -20,7 +20,7 @@ Which is exactly equivalent to:
   <p>Nationality: <span th:text="${session.user.nationality}">Saturn</span>.</p>
 </div>
 ```
-Of course, dollar and asterisk syntax can be mixed:
+当然，美元符号语法与星号语法可以混合使用：
 ```html
 <div th:object="${session.user}">
   <p>Name: <span th:text="*{firstName}">Sebastian</span>.</p>
@@ -28,7 +28,7 @@ Of course, dollar and asterisk syntax can be mixed:
   <p>Nationality: <span th:text="*{nationality}">Saturn</span>.</p>
 </div>
 ```
-When an object selection is in place, the selected object will also be available to dollar expressions as the `#object` expression variable:
+当有一个选好的对象时，选好的对象也可以使用带`#object`表达式变量的美元符号表达式：
 ```html
 <div th:object="${session.user}">
   <p>Name: <span th:text="${#object.firstName}">Sebastian</span>.</p>
@@ -36,7 +36,7 @@ When an object selection is in place, the selected object will also be available
   <p>Nationality: <span th:text="*{nationality}">Saturn</span>.</p>
 </div>
 ```
-As said, if no object selection has been performed, dollar and asterisk syntaxes are equivalent.
+如前所述，如果没有已选好的对象，美元符号语法与星号语法等价。
 ```html
 <div>
   <p>Name: <span th:text="*{session.user.name}">Sebastian</span>.</p>
