--- a/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
+++ b/I. Using Thymeleaf/4.3 Expressions on selections （asterisk syntax）.md
@@ -28,7 +28,7 @@
   <p>Nationality: <span th:text="*{nationality}">Saturn</span>.</p>
 </div>
 ```
-当有一个选好的对象时，选好的对象也可以使用带`#object`表达式变量的美元符号表达式：
+当有一个选好的对象时，也可以使用带`#object`表达式变量的美元符号表达式：
 ```html
 <div th:object="${session.user}">
   <p>Name: <span th:text="${#object.firstName}">Sebastian</span>.</p>
