Update 4.4 Link URLs.md

--- a/I. Using Thymeleaf/4.4 Link URLs.md
+++ b/I. Using Thymeleaf/4.4 Link URLs.md
@@ -1,14 +1,14 @@
 ### 4.4 链接URL
 
-Because of their importance, URLs are first-class citizens in web application templates, and the Thymeleaf Standard Dialect has a special syntax for them, the `@` syntax: `@{...}`
+在网络应用模版里，因为其重要性，URL也是一等公民。Thymeleaf标准方言为它们提供了`@`语法：`@{...}`
 
-There are different types of URLs:
+URL有不同的类型：
 
-- Absolute URLs: `http://www.thymeleaf.org`
-- Relative URLs, which can be:
-  - Page-relative: `user/login.html`
-  - Context-relative: `/itemdetails?id=3` (context name in server will be added automatically)
-  - Server-relative: `~/billing/processInvoice` (allows calling URLs in another context (= application) in the same server.
+- 绝对URL: `http://www.thymeleaf.org`
+- 相对URL，可以是：
+  - 相对于网页： `user/login.html`
+  - 相对于上下文： `/itemdetails?id=3` （服务器上上下文的名字会被自动添加）
+  - 相对于服务器： `~/billing/processInvoice` （允许在另一个上下文里调用URL（= application），在同一个服务器上
   - Protocol-relative URLs: `//code.jquery.com/jquery-2.0.3.min.js`
 The real processing of these expressions and their conversion to the URLs that will be output is done by implementations of the `org.thymeleaf.linkbuilder.ILinkBuilder` interface that are registered into the `ITemplateEngine` object being used.
 
