--- a/I. Using Thymeleaf/4.4 Link URLs.md
+++ b/I. Using Thymeleaf/4.4 Link URLs.md
@@ -9,8 +9,9 @@ URL有不同的类型：
   - 相对于网页： `user/login.html`
   - 相对于上下文： `/itemdetails?id=3` （服务器上上下文的名字会被自动添加）
   - 相对于服务器： `~/billing/processInvoice` （允许在另一个上下文里调用URL（= application），在同一个服务器上
-  - Protocol-relative URLs: `//code.jquery.com/jquery-2.0.3.min.js`
-The real processing of these expressions and their conversion to the URLs that will be output is done by implementations of the `org.thymeleaf.linkbuilder.ILinkBuilder` interface that are registered into the `ITemplateEngine` object being used.
+  - 相对于协议的URL： `//code.jquery.com/jquery-2.0.3.min.js`
+
+对这些表达式以及将它们转换成实际URL的处理，是通过实现`org.thymeleaf.linkbuilder.ILinkBuilder`接口实现的。它会被注册到正在使用的`ITemplateEngine`对象。
 
 By default, a single implementation of this interface is registered of the class `org.thymeleaf.linkbuilder.StandardLinkBuilder`, which is enough for both offline (non-web) and also web scenarios based on the Servlet API. Other scenarios (like integration with non-ServletAPI web frameworks) might need specific implementations of the link builder interface.
 
