--- a/I. Using Thymeleaf/4.4 Link URLs.md
+++ b/I. Using Thymeleaf/4.4 Link URLs.md
@@ -13,9 +13,9 @@ URL有不同的类型：
 
 对这些表达式以及将它们转换成实际URL的处理，是通过实现`org.thymeleaf.linkbuilder.ILinkBuilder`接口实现的。它会被注册到正在使用的`ITemplateEngine`对象。
 
-By default, a single implementation of this interface is registered of the class `org.thymeleaf.linkbuilder.StandardLinkBuilder`, which is enough for both offline (non-web) and also web scenarios based on the Servlet API. Other scenarios (like integration with non-ServletAPI web frameworks) might need specific implementations of the link builder interface.
+默认的，这个接口的单个实现，会注册在`org.thymeleaf.linkbuilder.StandardLinkBuilder`类。对于离线（无网）或是基于Servlet API的网络场景，这都足够了。另外的场景（比如整合无ServletAPI的网络框架）可能需要这个链接构建器接口的特定实现。
 
-Let’s use this new syntax. Meet the `th:href` attribute:
+让我们使用这个新语法。遇到`th:href`属性：
 ```html
 <!-- Will produce 'http://localhost:8080/gtvg/order/details?orderId=3' (plus rewriting) -->
 <a href="details.html" 
@@ -27,17 +27,16 @@ Let’s use this new syntax. Meet the `th:href` attribute:
 <!-- Will produce '/gtvg/order/3/details' (plus rewriting) -->
 <a href="details.html" th:href="@{/order/{orderId}/details(orderId=${o.id})}">view</a>
 ```
-Some things to note here:
+这里有一些需要注意的地方：
+- `th:href`是一个修饰符属性：一旦被处理，它将会计算链接URL，并把值设置到`<a>`标签的`href`属性。
+- 我们被允许为URL参数使用表达式（如你所见，`orderId=${o.id}`）。需要的URL参数编码操作也会自动执行。
+- 如果需要多个参数，它们会被逗号分隔：`@{/order/process(execId=${execId},execType='FAST')}`
+- 变量模版也允许出现在URL路径上：@{/order/{orderId}/details(orderId=${orderId})}
+- 以`/`开头（例如：`/order/details`）的相对URL会自动加上应用上下文名字作为前缀。
+- 如果没有启用cookie或者还不知道有没有启用，那么后缀`";jsessionid=..."`会加到相对URL上，这样就保存了会话。这称为URL重写。Thymeleaf允许你为每一个URL使用来自于Servlet API的`response.encodeURL(...)`机制，插入你自己的重写的过滤器。
+- `th:href`属性允许在我们的模版里，（可选的）有一个正在工作的静态`href`属性。这样，当为了查看设计直接打开时，我们的模版链接仍旧可以被浏览器正确导航。
 
-- `th:href` is a modifier attribute: once processed, it will compute the link URL to be used and set that value to the `href` attribute of the `<a>` tag.
-- We are allowed to use expressions for URL parameters (as you can see in `orderId=${o.id}`). The required URL-parameter-encoding operations will also be automatically performed.
-- If several parameters are needed, these will be separated by commas: `@{/order/process(execId=${execId},execType='FAST')}`
-- Variable templates are also allowed in URL paths: @{/order/{orderId}/details(orderId=${orderId})}
-- Relative URLs starting with `/` (eg: `/order/details`) will be automatically prefixed by the application context name.
-- If cookies are not enabled or this is not yet known, a `";jsessionid=..."` suffix might be added to relative URLs so that the session is preserved. This is called URL Rewriting and Thymeleaf allows you to plug in your own rewriting filters by using the `response.encodeURL(...)` mechanism from the Servlet API for every URL.
-- The `th:href` attribute allows us to (optionally) have a working static `href` attribute in our template, so that our template links remained navigable by a browser when opened directly for prototyping purposes.
-
-As was the case with the message syntax (`#{...}`), URL bases can also be the result of evaluating another expression:
+就像信息语法（`#{...}`），URL也可以是求值另一个表达式的结果：
 ```html
 <a th:href="@{${url}(orderId=${o.id})}">view</a>
 <a th:href="@{'/details/'+${user.login}(orderId=${o.id})}">view</a>
