--- a/I. Using Thymeleaf/4.5 Fragments.md
+++ b/I. Using Thymeleaf/4.5 Fragments.md
@@ -1,6 +1,6 @@
 ### 4.5 分段
 
-Fragment expressions are an easy way to represent fragments of markup and move them around templates. This allows us to replicate them, pass them to other templates as arguments, and so on.
+分段表达式是代表标记段落，在模版间移动它们的简单的方法。这允许我们复制它们，把它们作为参数传递给其它模版，等等。
 
 The most common use is for fragment insertion using `th:insert` or `th:replace` (more on these in a later section):
 ```html
