--- a/I. Using Thymeleaf/4.5 Fragments.md
+++ b/I. Using Thymeleaf/4.5 Fragments.md
@@ -2,14 +2,14 @@
 
 分段表达式是代表标记段落，在模版间移动它们的简单的方法。这允许我们复制它们，把它们作为参数传递给其它模版，等等。
 
-The most common use is for fragment insertion using `th:insert` or `th:replace` (more on these in a later section):
+分段插入是最普遍的用法，使用`th:insert`或者`th:replace`（在之后的章节会有更多关于这些的内容）：
 ```html
 <div th:insert="~{commons :: main}">...</div>
 ```
-But they can be used anywhere, just as any other variable:
+但是，它们可以在任何地方使用，就像其它的变量一样：
 ```html
 <div th:with="frag=~{footer :: #main/text()}">
   <p th:insert="${frag}">
 </div>
 ```
-Later in this tutorial there is an entire section devoted to Template Layout, including deeper explanation of fragment expressions.
+在此教程的后面部分，有一个完整的章节专注于模版设计，包括对分段表达式的更深层次的探索。
