Update 4.7 Appending texts.md

--- a/I. Using Thymeleaf/4.7 Appending texts.md
+++ b/I. Using Thymeleaf/4.7 Appending texts.md
@@ -1,6 +1,6 @@
 ### 4.7 文本拼接
 
-Texts, no matter whether they are literals or the result of evaluating variable or message expressions, can be easily appended using the `+` operator:
+文本，不管是字面量还是变量或者信息表达式的结果，都可以简单地使用`+`运算符拼接：
 ```html
 <span th:text="'The name of the user is ' + ${user.name}">
 ```
