Update 4.8 Literal substitutions.md

--- a/I. Using Thymeleaf/4.8 Literal substitutions.md
+++ b/I. Using Thymeleaf/4.8 Literal substitutions.md
@@ -15,5 +15,6 @@ Literal substitutions can be combined with other types of expressions:
 <span th:text="${onevar} + ' ' + |${twovar}, ${threevar}|">
 ```
 ```
-Only variable/message expressions (`${...}`, `*{...}`, `#{...}`) are allowed inside `|...|` literal substitutions. No other literals ('...'), boolean/numeric tokens, conditional expressions etc. are.
+Only variable/message expressions (`${...}`, `*{...}`, `#{...}`) are allowed inside `|...|` literal substitutions.
+No other literals ('...'), boolean/numeric tokens, conditional expressions etc. are.
 ```
