Update 4.8 Literal substitutions.md

--- a/I. Using Thymeleaf/4.8 Literal substitutions.md
+++ b/I. Using Thymeleaf/4.8 Literal substitutions.md
@@ -1,20 +1,19 @@
 ### 4.8 字面量置换
 
-Literal substitutions allow for an easy formatting of strings containing values from variables without the need to append literals with `'...'` + `'...'`.
-
-These substitutions must be surrounded by vertical bars (`|`), like:
+字面量置换允许用一种简单的方式，格式化包含变量的字符串而不需要使用`'...'` + `'...'` 拼接。
+这些置换须用竖线（`|`）包围，比如：
 ```html
 <span th:text="|Welcome to our application, ${user.name}!|">
 ```
-Which is equivalent to:
+相当于：
 ```html
 <span th:text="'Welcome to our application, ' + ${user.name} + '!'">
 ```
-Literal substitutions can be combined with other types of expressions:
+字面量置换可以和其它类型的表达式结合：
 ```html
 <span th:text="${onevar} + ' ' + |${twovar}, ${threevar}|">
 ```
 ```
-Only variable/message expressions (`${...}`, `*{...}`, `#{...}`) are allowed inside `|...|` literal substitutions.
-No other literals ('...'), boolean/numeric tokens, conditional expressions etc. are.
+只有变量/信息表达式（`${...}`, `*{...}`, `#{...}`）允许被包含在`|...|`里面。
+其它字面量（'...'），布尔/数字标记，条件表达式，等等，不被允许。
 ```
