Update 4.9 Arithmetic operations.md

--- a/I. Using Thymeleaf/4.9 Arithmetic operations.md
+++ b/I. Using Thymeleaf/4.9 Arithmetic operations.md
@@ -1,10 +1,10 @@
 ### 4.9 算术运算
 
-Some arithmetic operations are also available: `+`, `-`, `*`, `/` and `%`.
+一些算术运算同样可行：`+`, `-`, `*`, `/` 和 `%`.
 ```html
 <div th:with="isEven=(${prodStat.count} % 2 == 0)">
 ```
-Note that these operators can also be applied inside OGNL variable expressions themselves (and in that case will be executed by OGNL instead of the Thymeleaf Standard Expression engine):
+注意这些运算符也可以应用在OGNL变量表达式里面（在那种情况下它们将会由OGNL执行，而不是由Thymeleaf标准表达式引擎执行）：
 ```html
 <div th:with="isEven=${prodStat.count % 2 == 0}">
 ```
