Update 4.9 Arithmetic operations.md

--- a/I. Using Thymeleaf/4.9 Arithmetic operations.md
+++ b/I. Using Thymeleaf/4.9 Arithmetic operations.md
@@ -1,6 +1,6 @@
 ### 4.9 算术运算
 
-一些算术运算同样可行：`+`, `-`, `*`, `/` 和 `%`.
+一些算术运算同样可行：`+`, `-`, `*`, `/` 和 `%`。
 ```html
 <div th:with="isEven=(${prodStat.count} % 2 == 0)">
 ```
@@ -8,4 +8,4 @@
 ```html
 <div th:with="isEven=${prodStat.count % 2 == 0}">
 ```
-Note that textual aliases exist for some of these operators: `div` (`/`), `mod` (`%`).
+注意一些运算符存在别名：`div` (`/`), `mod` (`%`)。
