Update 4.10 Comparators and Equality.md

--- a/I. Using Thymeleaf/4.10 Comparators and Equality.md
+++ b/I. Using Thymeleaf/4.10 Comparators and Equality.md
@@ -1,6 +1,6 @@
 ### 4.10 比较和相等
 
-Values in expressions can be compared with the `>`, `<`, `>=` and `<=` symbols, and the `==` and `!=` operators can be used to check for equality (or the lack of it). Note that XML establishes that the `<` and `>` symbols should not be used in attribute values, and so they should be substituted by `&lt;` and `&gt;`.
+表达式里的值可以使用`>`, `<`, `>=`和`<=`符号比较。`==`和`!=`运算符用于检查相等（或者不相等）。Note that XML establishes that the `<` and `>` symbols should not be used in attribute values, and so they should be substituted by `&lt;` and `&gt;`.
 ```html
 <div th:if="${prodStat.count} &gt; 1">
 <span th:text="'Execution mode is ' + ( (${execMode} == 'dev')? 'Development' : 'Production')">
