Update 4.10 Comparators and Equality.md

--- a/I. Using Thymeleaf/4.10 Comparators and Equality.md
+++ b/I. Using Thymeleaf/4.10 Comparators and Equality.md
@@ -1,8 +1,8 @@
 ### 4.10 比较和相等
 
-表达式里的值可以使用`>`, `<`, `>=`和`<=`符号比较。`==`和`!=`运算符用于检查相等（或者不相等）。Note that XML establishes that the `<` and `>` symbols should not be used in attribute values, and so they should be substituted by `&lt;` and `&gt;`.
+表达式里的值可以使用`>`, `<`, `>=`和`<=`符号比较。`==`和`!=`运算符用于检查相等（或者不相等）。注意XML规定`<`和`>`标签不能用于属性值，所以应当把它们置换为`&lt;`和`&gt;`。
 ```html
 <div th:if="${prodStat.count} &gt; 1">
 <span th:text="'Execution mode is ' + ( (${execMode} == 'dev')? 'Development' : 'Production')">
 ```
-A simpler alternative may be using textual aliases that exist for some of these operators: `gt` (`>`), `lt` (`<`), `ge` (`>=`), `le` (`<=`), `not` (`!`). Also `eq` (`==`), `neq`/`ne` (`!=`).
+一个更简单的可选方法可能是使用别名：`gt` (`>`), `lt` (`<`), `ge` (`>=`), `le` (`<=`), `not` (`!`)。还有 `eq` (`==`), `neq`/`ne` (`!=`)。
