Update 4.11 Conditional expressions.md

--- a/I. Using Thymeleaf/4.11 Conditional expressions.md
+++ b/I. Using Thymeleaf/4.11 Conditional expressions.md
@@ -1,8 +1,8 @@
 ### 4.11 条件表达式
 
-Conditional expressions are meant to evaluate only one of two expressions depending on the result of evaluating a condition (which is itself another expression).
+条件表达式就是根据一个表达式的结果，求值另两个表达式里的其中一个表达式。
 
-Let’s have a look at an example fragment (introducing another attribute modifier, `th:class`):
+让我们看一看一个例子（介绍另一个属性符，`th:class`）：
 ```html
 <tr th:class="${row.even}? 'even' : 'odd'">
   ...
