Update 4.11 Conditional expressions.md

--- a/I. Using Thymeleaf/4.11 Conditional expressions.md
+++ b/I. Using Thymeleaf/4.11 Conditional expressions.md
@@ -2,7 +2,7 @@
 
 条件表达式就是根据一个表达式的结果，求值另两个表达式里的其中一个表达式。
 
-让我们看一看一个例子（介绍另一个属性符，`th:class`）：
+让我们看一看一个例子（介绍另一个属性修饰符，`th:class`）：
 ```html
 <tr th:class="${row.even}? 'even' : 'odd'">
   ...
