Update 4.11 Conditional expressions.md

--- a/I. Using Thymeleaf/4.11 Conditional expressions.md
+++ b/I. Using Thymeleaf/4.11 Conditional expressions.md
@@ -8,15 +8,15 @@
   ...
 </tr>
 ```
-All three parts of a conditional expression (`condition`, `then` and `else`) are themselves expressions, which means that they can be variables (`${...}`, `*{...}`), messages (`#{...}`), URLs (`@{...}`) or literals (`'...'`).
+一个条件表达式的三个部分（`condition`, `then` and `else`）本身也是表达式，这意味着它们也可以是变量（`${...}`, `*{...}`），信息（`#{...}`），URL（`@{...}`）或者字面量（`'...'`）。
 
-Conditional expressions can also be nested using parentheses:
+条件表达式也可以使用括号嵌套：
 ```html
 <tr th:class="${row.even}? (${row.first}? 'first' : 'even') : 'odd'">
   ...
 </tr>
 ```
-Else expressions can also be omitted, in which case a null value is returned if the condition is false:
+Else表达式也可以省略。在这种情况下，当条件为false时，将返回null值：
 ```html
 <tr th:class="${row.even}? 'alt'">
   ...
