Update 4.12 Default expressions（Elvis operator）.md

--- a/I. Using Thymeleaf/4.12 Default expressions（Elvis operator）.md
+++ b/I. Using Thymeleaf/4.12 Default expressions（Elvis operator）.md
@@ -1,6 +1,6 @@
 ### 4.12 默认表达式（猫王运算符）
 
-A default expression is a special kind of conditional value without a then part. It is equivalent to the Elvis operator present in some languages like Groovy, lets you specify two expressions: the first one is used if it doesn’t evaluate to null, but if it does then the second one is used.
+默认表达式指的是一种特殊的条件值。它没有then部分，等价于某些语言里的猫王运算符，比如Groovy。你可以指定两个表达式：如果第一个的值不是null，它就会使用第一个表达式，但是如果第一个表达式的值为null，那它就会使用第二个表达式。
 
 Let’s see it in action in our user profile page:
 ```html
