Update 4.12 Default expressions（Elvis operator）.md

--- a/I. Using Thymeleaf/4.12 Default expressions（Elvis operator）.md
+++ b/I. Using Thymeleaf/4.12 Default expressions（Elvis operator）.md
@@ -2,14 +2,14 @@
 
 默认表达式指的是一种特殊的条件值。它没有then部分，等价于某些语言里的猫王运算符，比如Groovy。你可以指定两个表达式：如果第一个的值不是null，它就会使用第一个表达式，但是如果第一个表达式的值为null，那它就会使用第二个表达式。
 
-Let’s see it in action in our user profile page:
+让我们在用户资料页面使用它：
 ```html
 <div th:object="${session.user}">
   ...
   <p>Age: <span th:text="*{age}?: '(no age specified)'">27</span>.</p>
 </div>
 ```
-As you can see, the operator is `?:`, and we use it here to specify a default value for a name (a literal value, in this case) only if the result of evaluating `*{age}` is null. This is therefore equivalent to:
+如你所见，运算符是`?:`。我们用它来指定一个默认值（这里是一个字面量值）。只要`*{age}`的结果为null，默认值就会被使用。因此，这等价于：
 ```html
 <p>Age: <span th:text="*{age != null}? *{age} : '(no age specified)'">27</span>.</p>
 ```
