Update 4.12 Default expressions（Elvis operator）.md

--- a/I. Using Thymeleaf/4.12 Default expressions（Elvis operator）.md
+++ b/I. Using Thymeleaf/4.12 Default expressions（Elvis operator）.md
@@ -13,7 +13,7 @@
 ```html
 <p>Age: <span th:text="*{age != null}? *{age} : '(no age specified)'">27</span>.</p>
 ```
-As with conditional values, they can contain nested expressions between parentheses:
+和条件值一样，它们可以在括号里包含嵌套的表达式：
 ```html
 <p>
   Name: 
