Update 4.13 The No-Operation token.md

--- a/I. Using Thymeleaf/4.13 The No-Operation token.md
+++ b/I. Using Thymeleaf/4.13 The No-Operation token.md
@@ -1,14 +1,14 @@
 ### 4.13 无操作标记
 
-The No-Operation token is represented by an underscore symbol (`_`).
+无操作标记用下划线（`_`）表示。
 
-The idea behind this token is to specify that the desired result for an expression is to do nothing, i.e. do exactly as if the processable attribute (e.g. `th:text`) was not there at all.
+这个标记后面的想法是：指定一个表达式不做任何东西，也就是和可处理属性（例如`th:text`）完全不存在一样。
 
-Among other possibilities, this allows developers to use prototyping text as default values. For example, instead of:
+其它可能的情况是，这允许开发者把原型文本作为默认值。例如，为了代替：
 ```html
 <span th:text="${user.name} ?: 'no user authenticated'">...</span>
 ```
-…we can directly use ‘no user authenticated’ as a prototyping text, which results in code that is both more concise and versatile from a design standpoint:
+······我们可以直接使用‘no user authenticated’，把它作为一个原型文本。从设计的角度看代码会更加简洁通用：
 ```html
 <span th:text="${user.name} ?: _">no user authenticated</span>
 ```
