Update 4.15 Data Conversion and Formatting.md

--- a/I. Using Thymeleaf/4.15 Data Conversion and Formatting.md
+++ b/I. Using Thymeleaf/4.15 Data Conversion and Formatting.md
@@ -1,12 +1,12 @@
 ### 4.15 数据转换/格式化
 
-Thymeleaf defines a double-brace syntax for variable (`${...}`) and selection (`*{...}`) expressions that allows us to apply data conversion by means of a configured conversion service.
+Thymeleaf为变量（`${...}`）和选择（`*{...}`）表达式定义了一种双大括号语法。这种语法允许我们用配置好的转换服务来应用数据转换。
 
-It basically goes like this:
+这种语法大致上像这样：
 ```html
 <td th:text="${{user.lastAccessDate}}">...</td>
 ```
-Noticed the double brace there?: `${{...}}`. That instructs Thymeleaf to pass the result of the `user.lastAccessDate` expression to the conversion service and asks it to perform a **formatting operation** (a conversion to `String`) before writing the result.
+注意到这里的大括号了嘛？`${{...}}`。那会通知Thymeleaf把表达式`user.lastAccessDate`的结果传递给转换服务，and asks it to perform a **formatting operation** (a conversion to `String`) before writing the result.
 
 Assuming that `user.lastAccessDate` is of type `java.util.Calendar`, if a conversion service (implementation of `IStandardConversionService`) has been registered and contains a valid conversion for `Calendar -> String`, it will be applied.
 
