--- a/I. Using Thymeleaf/4.14 Preprocessing.md
+++ b/I. Using Thymeleaf/4.14 Preprocessing.md
@@ -1,6 +1,6 @@
 ### 4.14 预处理
 
-In addition to all these features for expression processing, Thymeleaf has the feature of preprocessing expressions.
+除了所有这些表达式处理相关的特性，Thymeleaf还有预处理表达式的特性。
 
 Preprocessing is an execution of the expressions done before the normal one that allows for modification of the expression that will eventually be executed.
 
