--- a/I. Using Thymeleaf/4.14 Preprocessing.md
+++ b/I. Using Thymeleaf/4.14 Preprocessing.md
@@ -2,24 +2,24 @@
 
 除了所有这些表达式处理相关的特性，Thymeleaf还有预处理表达式的特性。
 
-Preprocessing is an execution of the expressions done before the normal one that allows for modification of the expression that will eventually be executed.
+预处理指的是在通常的表达式之前处理表达式。这允许对最终执行的表达式进行修改。
 
-Preprocessed expressions are exactly like normal ones, but appear surrounded by a double underscore symbol (like `__${expression}__`).
+预处理表达式和通常的表达式一样，但是被一双下划线包围（像`__${expression}__`）。
 
-Let’s imagine we have an i18n `Messages_fr.properties` entry containing an OGNL expression calling a language-specific static method, like:
+让我们想象一下：我们有一个国际化文件`Messages_fr.properties`，里面包含着一个OGNL表达式。这个表达式会调用一个指定语言的静态方法，就像：
 ```properties
 article.text=@myapp.translator.Translator@translateToFrench({0})
 ```
-…and a `Messages_es.properties equivalent`:
+同时还有一个`Messages_es.properties`文件：
 ```properties
 article.text=@myapp.translator.Translator@translateToSpanish({0})
 ```
-We can create a fragment of markup that evaluates one expression or the other depending on the locale. For this, we will first select the expression (by preprocessing) and then let Thymeleaf execute it:
+我们可以创建一段标记，根据地区信息对其中的一个表达式求值。为了达成目标，我们将首先选择表达式（使用预处理），然后让Thymeleaf执行它：
 ```html
 <p th:text="${__#{article.text('textVar')}__}">Some text here...</p>
 ```
-Note that the preprocessing step for a French locale will be creating the following equivalent:
+注意：当地区信息是法国时，预处理将会创建如下的内容：
 ```html
 <p th:text="${@myapp.translator.Translator@translateToFrench(textVar)}">Some text here...</p>
 ```
-The preprocessing String `__` can be escaped in attributes using `\_\_`.
+预处理字符串`__`可以使用`\_\_`在属性里转义。
