翻译5.2 为指定的属性设置值

--- a/I. Using Thymeleaf/5.2 Setting value to specific attributes.md
+++ b/I. Using Thymeleaf/5.2 Setting value to specific attributes.md
@@ -1,26 +1,26 @@
 ### 5.2 为指定的属性设置值
 
-By now, you might be thinking that something like:
+到目前为止，你可能觉得像：
 ```html
 <input type="submit" value="Subscribe!" th:attr="value=#{subscribe.submit}"/>
 ```
-…is quite an ugly piece of markup. Specifying an assignment inside an attribute’s value can be very practical, but it is not the most elegant way of creating templates if you have to do it all the time.
+这样的标记片段，相当丑陋。在一个属性值的内部指定赋值操作可以是非常实用的，但是如果你不得不一直这么做的话，这并不是创建模版的最优雅的方式。
 
-Thymeleaf agrees with you, and that’s why `th:attr` is scarcely used in templates. Normally, you will be using other `th:*` attributes whose task is setting specific tag attributes (and not just any attribute like `th:attr`).
+Thymeleaf和你意见一致，这也是在模版里几乎不使用`th:attr`的原因。通常，你会使用其它的`th:*`属性，为特定的标签属性设置值，而不是像`th:attr`一样为任何属性设置值。
 
-For example, to set the `value` attribute, use `th:value`:
+例如，为了设置`value`属性，使用`th:value`：
 ```html
 <input type="submit" value="Subscribe!" th:value="#{subscribe.submit}"/>
 ```
-This looks much better! Let’s try and do the same to the `action` attribute in the `form` tag:
+这看起来好多了！让我们尝试对`form`标签里的`action`属性也做相同的操作：
 ```html
 <form action="subscribe.html" th:action="@{/subscribe}">
 ```
-And do you remember those `th:href` we put in our `home.html` before? They are exactly this same kind of attributes:
+你还记得那些我们之前放进`home.html`的`th:href`吗？它们完全是同类属性：
 ```html
 <li><a href="product/list.html" th:href="@{/product/list}">Product List</a></li>
 ```
-There are quite a lot of attributes like these, each of them targeting a specific HTML5 attribute:
+有类似的相当多的属性，它们中的每一个都对应了一个特定的HTML5属性：
 
 |   |   |   |
 |---|---|---|
