Update 5.3 Setting more than one value at a time.md

--- a/I. Using Thymeleaf/5.3 Setting more than one value at a time.md
+++ b/I. Using Thymeleaf/5.3 Setting more than one value at a time.md
@@ -1,9 +1,9 @@
 ### 5.3 一次设置多个值
 
-There are two rather special attributes called `th:alt-title` and `th:lang-xmllang` which can be used for setting two attributes to the same value at the same time. Specifically:
+有两个比较特殊的属性，称为`th:alt-title` 和`th:lang-xmllang`。它们用于同时把两个属性设置为相同的值。特别地：
 
-- `th:alt-title` will set `alt` and `title`.
-- `th:lang-xmllang` will set `lang` and `xml:lang`.
+- `th:alt-title`会设置`alt`和`title`。
+- `th:lang-xmllang`会设置`lang`和` xml:lang`。
 For our GTVG home page, this will allow us to substitute this:
 ```html
 <img src="../../images/gtvglogo.png" 
